--- a/app/views/home/components/_header.html.erb
+++ b/app/views/home/components/_header.html.erb
@@ -9,6 +9,12 @@
         <li class="nav-item">
         	<%= link_to 'About Us', home_about_path, class:"nav-link" %>
         </li>
+        <li class="nav-item">
+        	<%= link_to 'friends', friends_path, class:"nav-link" %>
+        </li>
+        <li class="nav-item">
+        	<%= link_to 'Add Friends', new_friend_path, class:"nav-link" %>
+        </li>
       </ul>
     </div>
   </div>
